test/basicapp/v1/yaml/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basicapp-ingress
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /hi
        backend:
          serviceName: basicapp
          servicePort: 8000
---
