test/basicapp/v1/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basicapp
  labels:
    app: basicapp
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: basicapp
